tests/errors/error_modulo_zero.nimmy
# Error: Modulo by zero
let x = 10 % 0